-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 11, 13
-
Component/s: hotspot
-
b22
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8226875 | 11.0.5 | Aleksey Shipilev | P1 | Resolved | Fixed | b01 |
Windows x86_64:
c:/cygwin64/home/windows/worker/jdkX-windows/build/src/hotspot/share/utilities/virtualizationSupport.cpp(68) : error C3861: 'snprintf': identifier not found
c:/cygwin64/home/windows/worker/jdkX-windows/build/src/hotspot/share/utilities/virtualizationSupport.cpp(74) : error C3861: 'snprintf': identifier not found
make[3]: *** [lib/CompileJvm.gmk:177: /cygdrive/c/cygwin64/home/windows/worker/jdkX-windows/build/build/windows-x86_64-server-release/hotspot/variant-server/libjvm/objs/virtualizationSupport.obj] Error 1
make[3]: *** Waiting for unfinished jobs....
make[2]: *** [make/Main.gmk:257: hotspot-server-libs] Error 2
I think #include <stdio.h> is missing in newly added virtualizationSupport.cpp. Probably only no-PCH build is affected.
c:/cygwin64/home/windows/worker/jdkX-windows/build/src/hotspot/share/utilities/virtualizationSupport.cpp(68) : error C3861: 'snprintf': identifier not found
c:/cygwin64/home/windows/worker/jdkX-windows/build/src/hotspot/share/utilities/virtualizationSupport.cpp(74) : error C3861: 'snprintf': identifier not found
make[3]: *** [lib/CompileJvm.gmk:177: /cygdrive/c/cygwin64/home/windows/worker/jdkX-windows/build/build/windows-x86_64-server-release/hotspot/variant-server/libjvm/objs/virtualizationSupport.obj] Error 1
make[3]: *** Waiting for unfinished jobs....
make[2]: *** [make/Main.gmk:257: hotspot-server-libs] Error 2
I think #include <stdio.h> is missing in newly added virtualizationSupport.cpp. Probably only no-PCH build is affected.
- backported by
-
JDK-8226875 os::snprintf should be used in virtualizationSupport.cpp
-
- Resolved
-
- relates to
-
JDK-8214976 Warn about uses of functions replaced for portability
-
- Resolved
-
-
JDK-8222720 Provide extended VMWare/vSphere virtualization related info in the hs_error file on linux/windows x86_64
-
- Resolved
-