8224033: os::snprintf should be used in virtualizationSupport.cpp

Reviewed-by: mbaesken, stuefe